discussion/kv_engine/130419/130419_rev12_discussion.txt
======================================================================================================================
DESCRIPTION:

WIP MB-39815: Migrate DurabilityCompletionTask to folly Executors

Change-Id: Ia70a68f4d1551a3407c8bdbb56e91eb5f5f995e2

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Dave Rigby
Date: 2021-10-06 12:23:10.000000000
Message: 
Uploaded patch set 12: Patch Set 11 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-10-06 12:27:18.000000000
Message: 
Patch Set 12: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/13196/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/durability_timeout_task.h:94:70: error: non-virtual member function marked "override" hides virtual member function [clang-diagnostic-error]
    void updateNextExpiryTime(std::chrono::steady_clock::time_point) override;
                                                                     ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/ep_types.h:102:18: note: hidden overloaded virtual function "EventDrivenDurabilityTimeoutIface::updateNextExpiryTime" declared here: type mismatch at 1st parameter ("int" vs "std::chrono::steady_clock::time_point" (aka "time_point<std::chrono::_V2::steady_clock, duration<long, ratio<1, 1000000000> > >"))
    virtual void updateNextExpiryTime(
                 ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/ep_types.h:99:13: warning: use "= default" to define a trivial destructor [modernize-use-equals-default]
    virtual ~EventDrivenDurabilityTimeoutIface(){};
            ^                                   ~~
                                                = default;
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/ep_types.h:103:18: error: no member named "chrono" in namespace "std" [clang-diagnostic-error]
            std::chrono::steady_clock::time_point next) = 0;
                 ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/vbucket.h:145:57: error: non-virtual member function marked "override" hides virtual member function [clang-diagnostic-error]
            std::chrono::steady_clock::time_point next) override {
                                                        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/ep_types.h:102:18: note: hidden overloaded virtual function "EventDrivenDurabilityTimeoutIface::updateNextExpiryTime" declared here: type mismatch at 1st parameter ("int" vs "std::chrono::steady_clock::time_point" (aka "time_point<std::chrono::_V2::steady_clock, duration<long, ratio<1, 1000000000> > >"))
    virtual void updateNextExpiryTime(
                 ^
/opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/bits/unique_ptr.h:962:34: error: allocating an object of abstract class type "EventDrivenDurabilityTimeout" [clang-diagnostic-error]
    { return unique_ptr<_Tp>(new _Tp(std::forward<_Args>(__args)...)); }
                                 ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kv_bucket.cc:2751:25: note: in instantiation of function template specialization "std::make_unique<EventDrivenDurabilityTimeout, EpEngineTaskable &, VBucket &>" requested here
            return std::make_unique<EventDrivenDurabilityTimeout>(taskable,
                        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/ep_types.h:102:18: note: unimplemented pure virtual method "updateNextExpiryTime" in "EventDrivenDurabilityTimeout"
    virtual void updateNextExpiryTime(
                 ^
/opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/bits/unique_ptr.h:962:34: error: allocating an object of abstract class type "NoopEventDrivenDurabilityTimeout" [clang-diagnostic-error]
    { return unique_ptr<_Tp>(new _Tp(std::forward<_Args>(__args)...)); }
                                 ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/vbucket.h:152:17: note: in instantiation of function template specialization "std::make_unique<NoopEventDrivenDurabilityTimeout>" requested here
    return std::make_unique<NoopEventDrivenDurabilityTimeout>();
                ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/ep_types.h:102:18: note: unimplemented pure virtual method "updateNextExpiryTime" in "NoopEventDrivenDurabilityTimeout"
    virtual void updateNextExpiryTime(
                 ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/13196/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/durability_timeout_task.h:94:70:
error: non-virtual member function marked "override" hides virtual member function [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/13196/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/11984/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
